public interface Ingrediente {
    String obtenerNombre();
    double obtenerCantidad();
}